--- a/home-ui/src/app/login/login.component.html
+++ b/home-ui/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card style="max-width: 320px; margin: 0 auto; margin-top: 24px">
+<mat-card class="card-login">
     <mat-card-header>
         <div mat-card-avatar>
             <i class="fas fa-user fa-3x"></i>
@@ -6,7 +6,7 @@
         <mat-card-title>Auth One</mat-card-title>
         <mat-card-subtitle>JWT Tokens on K8s</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>
+    <mat-card-content class="card-login-content">
         <p>This is the Auth One login form</p>
         <p>{{ result }}</p>
     </mat-card-content>
@@ -14,3 +14,7 @@
         <button mat-raised-button color="primary" (click)="check()">Click me!</button>
     </mat-card-actions>
 </mat-card>
+
+<p class="footer">
+    <small>Version {{ apiVersion }}</small>
+</p>
