Form login and styles

--- a/home-ui/src/app/app.component.html
+++ b/home-ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="main-toolbar">
     <mat-toolbar-row>
-        Auth One
+        <i class="fas fa-key"></i>&nbsp;&nbsp; Auth One
     </mat-toolbar-row>
 </mat-toolbar>
 
