--- a/home-ui/src/app/app.component.scss
+++ b/home-ui/src/app/app.component.scss
@@ -1,11 +1,16 @@
 .main-toolbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
     -webkit-box-shadow: -5px 6px 30px 0px rgba(0,0,0,0.52);
     -moz-box-shadow: -5px 6px 30px 0px rgba(0,0,0,0.52);
     box-shadow: -5px 6px 30px 0px rgba(0,0,0,0.52);
 }
 
 .progress-bar {
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
 }
