--- a/home-ui/src/app/login/login.component.html
+++ b/home-ui/src/app/login/login.component.html
@@ -9,7 +9,11 @@
                 <input matInput placeholder="Username" [(ngModel)]="username">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Password" type="password" [(ngModel)]="password">
+                <input matInput placeholder="Password" [type]="hidePassword ? 'password' : 'text'"
+                    [(ngModel)]="password">
+                <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword">
+                    <i class="fas" [ngClass]="{ 'fa-eye-slash': hidePassword, 'fa-eye': !hidePassword}"></i>
+                </button>
             </mat-form-field>
         </div>
 
@@ -18,9 +22,30 @@
         </p>
     </mat-card-content>
     <mat-card-actions style="text-align: center">
-        <button mat-raised-button color="primary" (click)="login()" [disabled]="isLoading | async">LOGIN</button>
+        <button mat-raised-button color="primary" (click)="login()" [disabled]="!canLogin()">LOGIN</button>
     </mat-card-actions>
 </mat-card>
+
+<!-- 
+<mat-expansion-panel class="card-description">
+    <mat-expansion-panel-header>
+        <mat-panel-title>
+            JWT token management on a Kubernetes Cluster
+        </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div>
+        <p>
+            This is a proof of concept implementation of the OAuth protocol on a distributed microservice architecture
+            deployed
+            with Kubernetes.
+        </p>
+        <p>
+            JWT tokens are signed with an RSA private key so other microservices can verify the authenticity using the
+            public key.
+        </p>
+    </div>
+</mat-expansion-panel> -->
+
 
 <p class="footer">
     <small>API version {{ apiVersion }}</small>
