--- a/home-ui/src/styles.scss
+++ b/home-ui/src/styles.scss
@@ -9,15 +9,31 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 
+
+///////////////////////////////////////////////////////////////////////////
+// Google Fonts
+@import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
+
 ///////////////////////////////////////////////////////////////////////////
 // Global styles
 body {
+    margin-top: 120px;
+    margin-bottom: 32px;
+    margin-left: 12px;
+    margin-right: 12px;
+    padding: 0;
     // background-color: #eee;
     // background: rgb(242,242,249);
     // background: linear-gradient(141deg, rgba(242,242,249,1) 0%, rgba(195,195,245,1) 11%, rgba(8,207,247,1) 100%);
-    margin: 0;
-    padding: 0;
-    background: #a8c0ff;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #3f2b96, #a8c0ff);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #3f2b96, #a8c0ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+
+    // background: #a8c0ff;  /* fallback for old browsers */
+    // background: -webkit-linear-gradient(to right, #3f2b96, #a8c0ff);  /* Chrome 10-25, Safari 5.1-6 */
+    // background: linear-gradient(to right, #3f2b96, #a8c0ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+
+    font-family: 'Roboto', sans-serif;
+
+    background-image: url("/assets/cool-background.svg");
+    background-size: 120%;
+    background-repeat: no-repeat;
+    background-color: #f0f0f0;
 }
