First implementation of interceptor

--- a/home-ui/src/app/token-visualizer/token-visualizer.component.html
+++ b/home-ui/src/app/token-visualizer/token-visualizer.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card-token-visualizer">
     <mat-card-title>
-        Welcome NAME SURNAME
+        Welcome {{ userData?.fullName }}
     </mat-card-title>
     <mat-card-content>
         <div class="token-text">
