--- a/home-ui/src/app/main-toolbar/main-toolbar.component.scss
+++ b/home-ui/src/app/main-toolbar/main-toolbar.component.scss
@@ -13,3 +13,11 @@
     color: white;
     text-decoration: none;
 }
+
+.space-filler {
+    flex: 1 1 auto;
+}
+
+.user-avatar {
+    color: #a9a8df;
+}
