Avatar must be visible only if logged in

--- a/home-ui/src/app/main-toolbar/main-toolbar.component.html
+++ b/home-ui/src/app/main-toolbar/main-toolbar.component.html
@@ -7,6 +7,6 @@
         <!-- This fills the remaining space of the current row -->
         <span class="space-filler"></span>
 
-        <button mat-icon-button (click)="openUserDetailsDialog()"><i class="fas fa-user-circle fa-2x user-avatar"></i></button>
+        <button mat-icon-button (click)="openUserDetailsDialog()" *ngIf="isLoggedIn | async"><i class="fas fa-user-circle fa-2x user-avatar"></i></button>
     </mat-toolbar-row>
 </mat-toolbar>
