--- a/home-ui/src/styles.scss
+++ b/home-ui/src/styles.scss
@@ -12,7 +12,8 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 
 ///////////////////////////////////////////////////////////////////////////
 // Google Fonts
-@import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 ///////////////////////////////////////////////////////////////////////////
 // Global styles
@@ -24,9 +25,23 @@ body {
     padding: 0;
 
     font-family: 'Roboto', sans-serif;
+    line-height: 24px;
 
-    background-image: url("/assets/cool-background.svg");
-    background-size: 120%;
-    background-repeat: no-repeat;
-    background-color: #f0f0f0;
+    // background-image: url("/assets/cool-background.svg");
+    // background-size: 120%;
+    // background-repeat: no-repeat;
+    background-color: #e8e8e8;
+}
+
+.card-header-box {
+    height: 180px;
+    padding: 12px;
+    position: relative;
+    -webkit-box-shadow: -5px 6px 30px 0px rgba(0,0,0,0.52);
+    -moz-box-shadow: -5px 6px 30px 0px rgba(0,0,0,0.52);
+    box-shadow: -5px 6px 30px 0px rgba(0,0,0,0.52);
+}
+
+.card-content-box {
+    margin-top: 22px;
 }
